--- a/frontend/class-profile/styles/Home.module.css
+++ b/frontend/class-profile/styles/Home.module.css
@@ -25,7 +25,7 @@
     font-size: 64px;
     line-height: 82px;
     color: white;
-    display: inline-block;
+    display: inline;
     overflow-x: hidden;
     vertical-align: top;
     margin: 20px 0 0 15px;
